transparent header logo

--- a/content-head.html
+++ b/content-head.html
@@ -7,7 +7,7 @@
   <!--FB plugin meta info-->
   <meta property="og:title" content="John W Gardner Center for Youth, Stanford University">
   <meta property="og:type" content="non_profit">
-  <meta property="og:image" content="http://jgc.stanford.edu/images/LogoGraphic-2.png">
+  <meta property="og:image" content="http://jgc.stanford.edu/images/2012FebTopLogo.jpg">
   <meta property="og:url" content="http://jgc.stanford.edu">
   <meta property="og:site_name" content="JGC">
   <meta property="fb:admins" content="605843081" />
