--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@ document.createElement("article" );
   <!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame 
        Remove this if you use the .htaccess -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
+  <meta name="google-site-verification" content="W9ib8G1kb99iOj9Mq-YnIvPjvAXxjH0xA7qD2jtmG7E" />  
   
   <!--FB plugin meta info-->
   <meta property="og:title" content="John W Gardner Center for Youth, Stanford University">
@@ -164,7 +166,7 @@ document.createElement("article" );
                         <g:plusone size="medium" annotation="none"></g:plusone>
                      </li>
                      <li class="plugin">
-                       <div class="fb-like" data-href="http://jgc.stanford.edu" data-send="true" data-width="450" data-show-faces="false"></div>
+                       <div id="fb-like" class="fb-like" data-href="http://jgc.stanford.edu" data-send="true" data-width="450" data-show-faces="false"></div>
                      </li>
                    </ul>
                    <ul class="piped_right">
