--- a/content-footer.html
+++ b/content-footer.html
@@ -15,7 +15,7 @@
                         <g:plusone size="medium" annotation="none"></g:plusone>
                      </li>
                      <li class="plugin">
-                       <div class="fb-like" data-href="http://jgc.stanford.edu" data-send="true" data-width="450" data-show-faces="false"></div>
+                       <div id="fb-like" class="fb-like" data-href="http://jgc.stanford.edu" data-send="true" data-width="450" data-show-faces="false"></div>
                      </li>
                    </ul>
                    <ul class="piped_right">
