--- a/content-menu-top-search.html
+++ b/content-menu-top-search.html
@@ -12,23 +12,26 @@
     	<div id="navbar">
     	  <a href="/"><img src="/images/2012FebTopLogoTrans3.png" /></a>
 
-          <div id="cse" style="width: 200px; float: right; padding: 25px 15px 0px 15px;">Loading</div>
-          <script src="http://www.google.com/jsapi" type="text/javascript"></script>
-          <script type="text/javascript"> 
-            google.load('search', '1', {language : 'en'});
+          <script type="text/javascript" src="//www.google.com/jsapi"></script>
+          <script type="text/javascript">
+            google.load('search', '1');
             google.setOnLoadCallback(function() {
-              var customSearchOptions = {};  var customSearchControl = new google.search.CustomSearchControl(
-                '014221189792540735175:beufblrgl0a', customSearchOptions);
-              customSearchControl.setResultSetSize(google.search.Search.SMALL_RESULTSET);
-              var options = new google.search.DrawOptions();
-              options.setAutoComplete(true);
-              options.enableSearchboxOnly('http://jgc.stanford.edu/search.html','q',false,'?');
-              customSearchControl.draw('cse', options);
-            }, true);
+              google.search.CustomSearchControl.attachAutoCompletion(
+                '014221189792540735175:beufblrgl0a',
+                document.getElementById('q'),
+                'cse-search-box');
+            });
           </script>
-          
-          <link rel="stylesheet" href="http://www.google.com/cse/style/look/default.css" type="text/css" />
-
+          <form action="http://jgc.stanford.edu/search.html" id="cse-search-box">
+            <div>
+              <input type="text" name="q" id="q" autocomplete="off" size="12" />
+              <input type="hidden" name="cx" value="014221189792540735175:beufblrgl0a" />
+              <input type="hidden" name="cof" value="FORID:9" />
+              <input type="hidden" name="ie" value="UTF-8" />
+              <input type="submit" name="sa" value="Search" />
+            </div>
+          </form>
+          <script type="text/javascript" src="//www.google.com/cse/brand?form=cse-search-box&lang=en"></script>
         </div>
     </header>
 
