--- a/our_work/content-bts.html
+++ b/our_work/content-bts.html
@@ -21,6 +21,7 @@
       <h1 class="content-text-header">Publications</h1>
 
 <ul>
+<li>English Articulation Between the San Francisco Unified School District and the City College of San Francisco (<a href="/resources/publications/Gurantz_IB_120203_English Articulation Between the San Francisco Unified School District and the City College of San Francisco.pdf" class="link-no-underline">Issue Brief</a> & <a href="/resources/publications/Gurantz_SS_120203_English Articulation Between the San Francisco Unified School District and the City College of San Francisco.pdf" class="link-no-underline">Snapshot</a>)</li>
 <li>Secondary to Postsecondary Transitions for Youth in San Francisco Unified School District (<a href="/resources/publications/JGC_IB_SFUSDPostSecondaryTransition2010.pdf" class="link-no-underline">Issue Brief</a> & <a href="/resources/publications/JGC_SS_SFUSDPostSecondaryTransition2011.pdf" class="link-no-underline">Snapshot</a>)</li>
 
 <li>Supporting the Transition to Postsecondary Education (<a href="/resources/publications/JGC_SS_SupportingTransitionPostsecondary2011.pdf" class="link-no-underline">Snapshot</a>)
