--- a/resources/content-snapshots.html
+++ b/resources/content-snapshots.html
@@ -4,6 +4,13 @@
 
         <div class="jgc-content-feature-item-left">
           <h1 class="title-page-header-big">Snapshots</h1>
+
+<br>
+<span class="content-bold">2012</span>
+<ul style="list-style: none;">
+<li><a href="/resources/publications/Gurantz_SS_120203_English Articulation Between the San Francisco Unified School District and the City College of San Francisco.pdf" class="link-no-underline">English Articulation Between the San Francisco Unified School District and the City College of San Francisco</a></li>
+</ul
+
 <br>
 <span class="content-bold">2011</span>
 <ul style="list-style: none;">
