pushing some Angela changes plus my addition of mural page

--- a/about_jgc/content-team.html
+++ b/about_jgc/content-team.html
@@ -90,6 +90,11 @@
             </div>
    	    <div class="column-inner-box">
 
+ 		<a class="header-link" href="/about_jgc/team_bios/nancy.html">Nancy Mancini</a>
+	  <p>Communications Manager</p>
+	  <p><a href="mailto:nmancini@stanford.edu">nmancini@stanford.edu</a></p>
+          <br>
+
 	 
 		
 	  <a class="header-link" href="/about_jgc/team_bios/angela.html">Angela Ongoco</a>
