--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ document.createElement("article" );
                  
                  <div class="footer">
                    <span class="left_footer_text"> 
-                   Copyright &copy 2012 John W. Gardner Center at Stanford University. All rights reserved.<br>This mural is by the Mural Music & Arts Project, designed by Omar Ramirez <a href="http://www.muralmusicarts.org">muralmusicarts.org</a></span> 
+                   Copyright &copy 2012 John W. Gardner Center at Stanford University. All rights reserved.<br>This <a href="mural.html" title="Learn more about the history behind this mural">mural</a> is by the Mural Music & Arts Project, designed by Omar Ramirez <a href="http://www.muralmusicarts.org">muralmusicarts.org</a></span> 
                    <ul class="piped">
                      <li class="footer"><a href="http://stanford.edu/site/terms.html" target="_blank" id="first" class="footer">Terms of use</a></li>
                      <li class="footer"><a href="http://adminguide.stanford.edu/63.pdf" target="_blank" class="footer">Privacy policy</a></li>
