--- a/our_work/content-cris.html
+++ b/our_work/content-cris.html
@@ -19,6 +19,11 @@
 <li>San Jose Unified School District</li>
 <li>School District of Philadelphia</li>
 </ul>
+<br>
+<h1 class="content-text-header">Tools</h1>
+<ul>
+<li><a href="/our_work/cris/CRIS Toolkit - Interim Product - Nov 2011.pdf">College Readiness Indicator Systems Toolkit (Interim Product)</a></li>
+</ul>
     </div> <!--end right side box div-->
     </aside>
 
