--- a/resources/content-reports.html
+++ b/resources/content-reports.html
@@ -7,9 +7,11 @@
 
 <h1 class="title-page-header-big">Reports</h1>
 <br>
-<a href="http://www.rwjf.org/pr/product.jsp?id=63651">Playworks Implementation in Eight Bay Area Elementary Schools </a>
+<a href="/resources/reports/Community Counts_McLaughlin.pdf">Community Counts: How Youth Organizations Matter for Youth Development</a><br>
 <br>
-<a href="http://www.rwjf.org/pr/product.jsp?id=63651">Playworks: Supporting Play and Physical Activity in Low-Income Elementary SchoolsReport</a>
+<a href="http://www.rwjf.org/pr/product.jsp?id=63651">Playworks Implementation in Eight Bay Area Elementary Schools </a><br>
+<br>
+<a href="http://www.rwjf.org/pr/product.jsp?id=63651">Playworks: Supporting Play and Physical Activity in Low-Income Elementary SchoolsReport</a><br>
          </div>
 
   
