reports and home page update

--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@ document.createElement("article" );
 					<p>
 						<ul class="news">
               
-              <li>February 7:  Milbrey McLaughlin presents <a class="link-homepage-feature" href="http://ed.stanford.edu/events/partnering-districts-research-matters">Partnering with Districts for Research that Matters</a> </li>
-<li>March 8: Oded Gurantz presents <a class="link-homepage-feature" href="http://cepa.stanford.edu/ecology/workshops">Postsecondary Ecology Workshop 2012</a></li>
+              <li> <a class="link-homepage-feature" href="http://app.mx3.americanprogressaction.org/e/es.aspx?s=785&e=280391&elq=7e3d70e20f604ba789b6f01d1d345ce5">Feb 22: Positive Outcomes in Community Schools: Research from a Local Initiative in Redwood City </a></li>
+<li><a class="link-homepage-feature" href="http://cepa.stanford.edu/ecology/workshops">March 8: Postsecondary Ecology Workshop 2012</a></li>
 
 
 						</ul>
@@ -143,7 +143,7 @@ document.createElement("article" );
                                         &nbsp;<br>
 					<ul class="data">
 						<li><a class="link-homepage-feature" href="http://www.communityschools.org/resources/community_schools_evaluation_toolkit.aspx">Community Schools Evaluation Toolkit</a></li>
-						<li><a class="link-homepage-feature" href="http://jgcnet.stanford.edu">Map of EPA comunity programs</a></li>
+						<li><a class="link-homepage-feature" href="http://jgcnet.stanford.edu">Map of EPA community programs</a></li>
 <li><a class="link-homepage-feature" href="http://johnwgardnertestsite.pbworks.com/w/page/13471102/BASICS%20Toolkit">BASICS Toolkit: Building, Assessing, Sustaining, and Improving Community Schools</a></li>
 					</ul>
 				</div>
