--- a/resources/content-reports.html
+++ b/resources/content-reports.html
@@ -9,10 +9,17 @@
 <br>
 <a href="/resources/reports/Community Counts_McLaughlin.pdf">Community Counts: How Youth Organizations Matter for Youth Development</a><br>
 <br>
-<a href="http://www.rwjf.org/pr/product.jsp?id=63651">Playworks Implementation in Eight Bay Area Elementary Schools </a><br>
+<a href="/resources/reports/4632.63651.finalreport.pdf">Playworks Implementation in Eight Bay Area Elementary Schools </a><br>
 <br>
-<a href="http://www.rwjf.org/pr/product.jsp?id=63651">Playworks: Supporting Play and Physical Activity in Low-Income Elementary SchoolsReport</a><br>
-         </div>
+<a href="/resources/reports/4632.63651.playandphysicalactivity.pdf">Playworks: Supporting Play and Physical Activity in Low-Income Elementary SchoolsReport</a><br>
+<br>
+<a href="/resources/reports/4632.63651.report.pdf">PlayWorks: Early Playworks Implementation in Six Bay Area Elementary Schools</a><br>
+<br>
+<a href="/resources/reports/4632.63651.schoolclimate.pdf">PlayWorks: Supporting Positive School Climate in Low-Income Elementary Schools</a><br>
+<br>
+<a href="/resources/reports/4632.63651.youthdevelopment.pdf">PlayWorks: Promoting Positive Youth Development in Low-Income Elementary Schools</a><br>
+<br>
+        </div>
 
   
 
