Content updates week of 20-02-12

--- a/our_work/content-alt-ed.html
+++ b/our_work/content-alt-ed.html
@@ -12,6 +12,7 @@
 <h1 class="content-text-header">Publications</h1>
 
 <ul>
+<li>Building Effective Learning Environments in California's Continuation High Schools (<a href="/resources/publications/Bush_Alt Ed_Learning_Environment final 2-2012.pdf"class="link-no-underline">Issue Brief</a>)</li>
 <li>PLUS: San Jose's Successful Alternative Education Option (<a href="/resources/publications/JGC_IB_PLUSSanJoseAltEd2011.pdf"class="link-no-underline">Issue Brief</a>)</li>
 
 <li>Intake Processes at Continuation High Schools: Shaping School Climate through Selection and Enrollment Strategies (<a href="/resources/publications/JGC_IB_IntakeContinuationHS2011.pdf"class="link-no-underline">Issue Brief</a>)</li>
