fixes, improvements from week of Mar 5th

--- a/content-donate.html
+++ b/content-donate.html
@@ -35,7 +35,8 @@
 	    Please indicate &quot;John W. Gardner Center&quot; on memo line on check.</li>
   	    <br />
 			
-            <li>You can also donate to the Gardner Center through securities transfer by visiting the <strong><a href="https://pgnet22.stanford.edu/give/home?pgnTPC=75&amp;olc=06416&amp;stp=1&amp;cturl=close&amp;gdso=4&amp;pgOrg=ung" target="_blank">Giving at Stanford</a></strong> website and choose securities transfer as method of payment. You can also contact Marianne Chatterton (tel: 650-723-1137 or email: <a href="mailto:mfchatte@stanford.edu">mfchatte@stanford.edu</a>) for details on how to donate via securities transfer.
+            <li>You can also donate to the Gardner Center through securities transfer by visiting the <strong><a href="https://pgnet22.stanford.edu/give/home?pgnTPC=75&amp;olc=06416&amp;stp=1&amp;cturl=close&amp;gdso=4&amp;pgOrg=ung" target="_blank">Giving at Stanford</a></strong> website and choose securities transfer as method of payment. </li><br>
+            <li>You may also contact Caroline Girgis (tel: 650-725-2611 or email: <a href="mailto:cgirgis@stanford.edu">cgirgis@stanford.edu</a>) for details on how to donate via securities transfer.
             </li>
  	  </ul>
           <br>
