--- a/our_work/content-cris.html
+++ b/our_work/content-cris.html
@@ -54,9 +54,9 @@
 
 <span class="content-bold">The CRIS Initiative:  Background, Strategies and Activities</span>
 
-<p>The John W. Gardner Center for Youth and Their Communities (JGC) at Stanford University and the Annenberg Institute for School Reform (AISR) at Brown University are partnering on a three-year initiative funded by the Bill and Melinda Gates Foundation to develop models for College Readiness Indicator Systems (CRIS).  The CRIS initiative involves close collaboration with a small number of selected school districts or school networks across the country—several of which have already been deeply involved in the development and implementation of EWSs. The JGC will develop and study the implementation of the tri-level CRIS in conjunction with districts, using a flexible, “design-build” approach.  The AISR will focus on cross-site learning; brokering expertise and supports for districts; understanding issues related to district, municipal, state, and federal contexts; and process documentation.</p>
+<p>The John W. Gardner Center for Youth and Their Communities (JGC) at Stanford University and the Annenberg Institute for School Reform (AISR) at Brown University are partnering on a three-year initiative funded by the Bill and Melinda Gates Foundation to develop models for College Readiness Indicator Systems (CRIS).  The CRIS initiative involves close collaboration with a small number of selected school districts or school networks across the country—several of which have already been deeply involved in the development and implementation of EWSs. The JGC is developing and studying the implementation of the tri-level CRIS in conjunction with districts, using a flexible, “design-build” approach.  The AISR is focusing on cross-site learning; brokering expertise and supports for districts; understanding issues related to district, municipal, state, and federal contexts; and process documentation.</p>
 <br>
-<p>Specifically the JGC will support districts by:<p>
+<p>Specifically the JGC supports districts by:<p>
 
  
 <br>
@@ -75,7 +75,7 @@
 
  </ul>
 <br>
-<p>Each participating district will develop a unique scope of work tailored to its particular needs that will be directly linked to the development of the tri-level system of college readiness indicators.</p>
+<p>Each participating district is developing a unique scope of work tailored to its particular needs that will be directly linked to the development of the tri-level system of college readiness indicators.</p>
 <br>
  
 <p>For more information about the College Readiness Indicator Systems initiative, please contact Angela Ongoco at <a href="mailto:aongoco@stanford.edu"> aongoco@stanford.edu </a>or Mary Arkins Decasse at <a href="mailto:mary_arkins@brown.edu">mary_arkins@brown.edu</a>. </p>         </div>
