--- a/our_work/content-ece.html
+++ b/our_work/content-ece.html
@@ -14,6 +14,14 @@
 <ul>
 <li>Institute for Educational Leadership-Coalition for Community Schools</li>
 </ul>
+
+<br>
+
+<h1 class="content-text-header">Publications</h1>
+
+<ul>
+<li><a href="/resources/reports/ECE Linkages Interim Report Summer 2011.Final.pdf">Early Childhood and Community Schools Linkages Project, Interim Report - August 2011</a></li>
+</ul>
     </div> <!--end right side box div-->
     </aside>
 
