content changes and clean up week of 3-18

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ document.createElement("article" );
 				<div class="feature_text">
 					&nbsp;<br>
 					<ul class="pdf">
-						<li><a class="link-homepage-feature" href="/resources/publications/JGC_IB_Motivation2010.pdf"> Practices that Promote Middle School Students’ Motivation and Achievement</a></li>
+						<li><a class="link-homepage-feature" href="/resources/publications/Motivation - Feb 2012.pdf"> Caring and Motivating Middle School Classrooms</a></li>
 						<li><a class="link-homepage-feature" href="/resources/publications/JGC_IB_AfterSchoolPhysicalFitness2011.pdf" >Community-Based After School Programs and Youth Physical Fitness</a></li>
 						
 					</ul>
@@ -122,8 +122,10 @@ document.createElement("article" );
 					<p>
 						<ul class="news">
               
-              <li> <a class="link-homepage-feature" href="http://app.mx3.americanprogressaction.org/e/es.aspx?s=785&e=280391&elq=7e3d70e20f604ba789b6f01d1d345ce5">Feb 22: Positive Outcomes in Community Schools: Research from a Local Initiative in Redwood City </a></li>
-<li><a class="link-homepage-feature" href="http://cepa.stanford.edu/ecology/workshops">March 8: Postsecondary Ecology Workshop 2012</a></li>
+              <li> <a class="link-homepage-feature" href="http://www.aera.net/AnnualMeetingsOtherEvents/AnnualMeetingOtherEvents/tabid/10208/Default.aspx">April 13 – 17: Population Association of America, 2012 Annual Meeting </a></li>
+
+
+              <li> <a class="link-homepage-feature" href="#">April 18: 2012 Stanford Business of Education Symposium </a></li>
 
 
 						</ul>
