--- a/our_work/content-motivation.html
+++ b/our_work/content-motivation.html
@@ -17,6 +17,9 @@
 <br>
       <h1 class="content-text-header">Publications</h1>
 <ul>
+
+<li>Caring and Motivating Middle School Classrooms (<a href="/resources/publications/Motivation - Feb 2012.pdf">Issue Brief</a>)</li>
+
 <li>Practices that Promote Middle School Students’ Motivation and Achievement (<a href="/resources/publications/JGC_IB_Motivation2010.pdf">Issue Brief</a>)</li>
 </ul>
     
