--- a/our_work/content-playworks.html
+++ b/our_work/content-playworks.html
@@ -18,10 +18,16 @@
 
       <h1 class="content-text-header">Publications</h1>
 <ul>
-<li>Playworks Implementation in Eight Bay Area Elementary Schools (<a href="http://www.rwjf.org/pr/product.jsp?id=63651">Report</a>)</li>
+<li>Playworks Implementation in Eight Bay Area Elementary Schools (<a href="http://www.rwjf.org/files/research/4632.63651.finalreport.pdf">Report</a>)</li>
 
-<li>Playworks: Supporting Play and Physical Activity in Low-Income Elementary Schools (<a href="http://www.rwjf.org/pr/product.jsp?id=63651">Report)</a></li>
+<li>Playworks: Supporting Play and Physical Activity in Low-Income Elementary Schools (<a href="http://www.rwjf.org/files/research/4632.63651.playandphysicalactivity.pdf">Report)</a></li>
 
+<li>PlayWorks: Early Playworks Implementation in Six Bay Area Elementary Schools (<a href="/resources/reports/4632.63651.report.pdf">Report)</a></li>
+
+
+<li>PlayWorks: Supporting Positive School Climate in Low-Income Elementary Schools (<a href="/resources/reports/4632.63651.schoolclimate.pdf">Report)</a></li>
+
+<li>PlayWorks: Promoting Positive Youth Development in Low-Income Elementary Schools (<a href="/resources/reports/4632.63651.youthdevelopment.pdf">Report)</a></li>
 
 <li>Child's Play: Why increasing opportunities to play and be active may improve students' academic and physical outcomes (<a href="/resources/lit-review/Lit-Review_PlayWorks_091027.pdf">Lit Review</a>)</li>
 </ul>
