added RA photos to bio pages

--- a/about_jgc/team_bios/content-katie.html
+++ b/about_jgc/team_bios/content-katie.html
@@ -6,7 +6,9 @@
 <h1 class="content-text-header">Katie Stokes-Guinan</h1>
 <span class="content-bold">Graduate Research Assistant </span><br>
 <br>
-           <p>Katie Stokes-Guinan is a doctoral candidate in the School of Education. Prior to beginning her graduate studies, she worked in the non-profit sector for more than 10 years. Her experience includes developing, implementing, and evaluating programs related to both family literacy and youth development. Her work at the JGC involves supporting the Playworks evaluation project.</p>
+<p>
+<img class="bio-std" src="/images/team/ra/katie.png">
+Katie Stokes-Guinan is a doctoral candidate in the School of Education. Prior to beginning her graduate studies, she worked in the non-profit sector for more than 10 years. Her experience includes developing, implementing, and evaluating programs related to both family literacy and youth development. Her work at the JGC involves supporting the Playworks evaluation project.</p>
          </div>
 
  
