--- a/about_jgc/team_bios/content-lambrina.html
+++ b/about_jgc/team_bios/content-lambrina.html
@@ -6,7 +6,9 @@
 <h1 class="content-text-header">Lambrina Mileva</h1>
 <span class="content-bold">Graduate Research Assistant</span><br>
 <br>
-           <p>Lambrina Mileva is a doctoral student in the Administration and Policy Analysis program at Stanford University. She received her B.A. and M.A. from Harvard in Comparative Literature, after which she ran service-learning programs at Chicago Public Schools (CPS) and taught middle school in Madrid, Spain. Her academic interests involve research on district reform, college readiness, indicator systems, evaluation and assessment, data inquiry, school networks, and teacher identity and leadership. In particular, she focuses on teacher and administrator teams' implementation of inquiry reform, as well as educators' conceptions and practices around using data and evidence in schools. She has a strong interest in multi-methods research, and obtained a minor in Quantitative Methods while at Stanford. </p>
+<p>
+<img class="bio-std" src="/images/team/ra/lambrina.png">
+Lambrina Mileva is a doctoral student in the Administration and Policy Analysis program at Stanford University. She received her B.A. and M.A. from Harvard in Comparative Literature, after which she ran service-learning programs at Chicago Public Schools (CPS) and taught middle school in Madrid, Spain. Her academic interests involve research on district reform, college readiness, indicator systems, evaluation and assessment, data inquiry, school networks, and teacher identity and leadership. In particular, she focuses on teacher and administrator teams' implementation of inquiry reform, as well as educators' conceptions and practices around using data and evidence in schools. She has a strong interest in multi-methods research, and obtained a minor in Quantitative Methods while at Stanford. </p>
          </div>
 
  
