--- a/about_jgc/team_bios/content-rivka.html
+++ b/about_jgc/team_bios/content-rivka.html
@@ -6,7 +6,9 @@
 <h1 class="content-text-header">Rivka Burstein-Stern </h1>
 <span class="content-bold">Policy, Organization, and Leadership Studies Intern </span><br>
 <br>
-           <p>Rivka Burstein-Stern is pursuing an MA in the Policy, Organization and Leadership Studies program in Stanford's School of Education. She hails from Seattle, Washington and attended Carleton College in, Northfield, Minnesota, where she studied political science and educational studies. She spent the last four years working as the Field Outreach Coordinator at the Afterschool Alliance, which works to increase access to quality, affordable afterschool programs for all children. Rivka has a passion for youth development and believes strongly in the power of school-community collaboration for the benefit of the entire community. Rivka is also passionate about delicious baked goods, sand volleyball and singing karaoke
+<p>
+<img class="bio-std" src="/images/team/ra/rivka.png">
+Rivka Burstein-Stern is pursuing an MA in the Policy, Organization and Leadership Studies program in Stanford's School of Education. She hails from Seattle, Washington and attended Carleton College in, Northfield, Minnesota, where she studied political science and educational studies. She spent the last four years working as the Field Outreach Coordinator at the Afterschool Alliance, which works to increase access to quality, affordable afterschool programs for all children. Rivka has a passion for youth development and believes strongly in the power of school-community collaboration for the benefit of the entire community. Rivka is also passionate about delicious baked goods, sand volleyball and singing karaoke
 
  </p>
          </div>
