--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@ document.createElement("article" );
 					<p>
 						<ul class="news">
               
-              <li> <a class="link-homepage-feature" href="http://www.aera.net/AnnualMeetingsOtherEvents/AnnualMeetingOtherEvents/tabid/10208/Default.aspx">April 13 – 17: Population Association of America, 2012 Annual Meeting </a></li>
+              <li> <a class="link-homepage-feature" href="http://www.aera.net/AnnualMeetingsOtherEvents/AnnualMeetingOtherEvents/tabid/10208/Default.aspx">April 13 – 17: American Educational Research Association
+2012 Annual Meeting </a></li>
 
 
               <li> <a class="link-homepage-feature" href="#">April 18: 2012 Stanford Business of Education Symposium </a></li>
