--- a/about_jgc/content-jobs.html
+++ b/about_jgc/content-jobs.html
@@ -5,12 +5,17 @@
         <div class="jgc-content-feature-item-left">
         <h1 class="title-page-header-big">Jobs, Internships, and Volunteer Opportunities</h1>
 <br>
-<h1 class="content-text-header">Job Opening</h1><br>
+<h1 class="content-text-header">Job Openings</h1><br>
 <a href="/about_jgc/SSRA_Job_Description_2012"><span class="content-bold">Social Science Research Associate</span></a> (Job ID: 46371)<br>
 Apply through <a href="http://jobs.stanford.edu/">http://jobs.stanford.edu/</a>
+<br>
+<br>
+  <h1 class="content-text-header">Internships</h1>  
+<br>
+<a href="/about_jgc/Qualitative Research Intern Summer2012.pdf"><span class="content-bold">Qualitative Research Intern</span></a> 
  
          </div>
 
-        
+    
 
        </div>
