--- a/about_jgc/team_bios/content-brandy.html
+++ b/about_jgc/team_bios/content-brandy.html
@@ -6,7 +6,9 @@
            <h1 class="content-text-header">Brandy Quinn</h1>
            <span class="content-bold">Graduate Research Assistant</span><br>
 	   <br>
-	  <p> Brandy Quinn is a doctoral candidate studying Education (Developmental and Psychological Sciences) at Stanford University. She has completed extensive coursework in education, psychology, and qualitative and quantitative research. Her professional background includes several years as a high school teacher, time as an elementary special education teacher and work with youth in leadership programs. Brandy has also supported faculty-sponsored research projects in the areas of adolescent development (Youth Purpose Project, Path to Purpose Project, American Identity Project), moral development, and positive youth development. Brandy's dissertation is looking at the potential relations between adolescents’ perceptions of their high school communities and the development of generous purpose in life. </p>
+<p> 
+<img class="bio-std" src="/images/team/ra/brandy.png">
+Brandy Quinn is a doctoral candidate studying Education (Developmental and Psychological Sciences) at Stanford University. She has completed extensive coursework in education, psychology, and qualitative and quantitative research. Her professional background includes several years as a high school teacher, time as an elementary special education teacher and work with youth in leadership programs. Brandy has also supported faculty-sponsored research projects in the areas of adolescent development (Youth Purpose Project, Path to Purpose Project, American Identity Project), moral development, and positive youth development. Brandy's dissertation is looking at the potential relations between adolescents’ perceptions of their high school communities and the development of generous purpose in life. </p>
 
          </div>
 
