--- a/about_jgc/team_bios/content-dara.html
+++ b/about_jgc/team_bios/content-dara.html
@@ -6,7 +6,9 @@
 <h1 class="content-text-header">Dara Kosberg </h1>
 <span class="content-bold">Policy, Organization, and Leadership Studies Intern </span><br>
 <br>
-           <p>Dara Kosberg is a current Masters student in the Policy, Organization and Leadership Studies program in the School of Education. For the past five years, she worked at Net Impact, a nonprofit organization in San Francisco, managing their partnerships with companies, nonprofits and the government. She previously coordinated children's art programs at the Community School of Music and Art in Mountain View and was a Teach For America corps member in New Orleans. Dara is supporting JGC¹s work with Redwood City 2020.</p>
+<p>
+<img class="bio-std" src="/images/team/ra/dara.png">
+Dara Kosberg is a current Masters student in the Policy, Organization and Leadership Studies program in the School of Education. For the past five years, she worked at Net Impact, a nonprofit organization in San Francisco, managing their partnerships with companies, nonprofits and the government. She previously coordinated children's art programs at the Community School of Music and Art in Mountain View and was a Teach For America corps member in New Orleans. Dara is supporting JGC¹s work with Redwood City 2020.</p>
          </div>
 
  
