--- a/about_jgc/team_bios/content-maribel.html
+++ b/about_jgc/team_bios/content-maribel.html
@@ -6,7 +6,9 @@
            <h1 class="content-text-header">Maribel Santiago</h1>
            <span class="content-bold">Graduate Research Assistant</span><br>
 	   <br>
-	  <p> Maribel Santiago is a part of the JGC team focused on the College Readiness Indicator Systems project.  Prior to becoming a doctoral student at Stanford University's School of Education, Maribel was a lead teacher and program coordinator for the UCLA Institute for Democracy, Education, and Access's Council of Youth Research where she taught high school students graduate-level research techniques and worked with them in conducting education research.  She also taught high school social studies for several years in Watts, where she created community-based lesson plans that encouraged students to learn about and work within their neighborhoods.  She received her B.A.s in History and Chicana/o Studies and M.Ed from UCLA. </p>
+<p>
+<img class="bio-std" src="/images/team/ra/maribel.png">
+Maribel Santiago is a part of the JGC team focused on the College Readiness Indicator Systems project.  Prior to becoming a doctoral student at Stanford University's School of Education, Maribel was a lead teacher and program coordinator for the UCLA Institute for Democracy, Education, and Access's Council of Youth Research where she taught high school students graduate-level research techniques and worked with them in conducting education research.  She also taught high school social studies for several years in Watts, where she created community-based lesson plans that encouraged students to learn about and work within their neighborhoods.  She received her B.A.s in History and Chicana/o Studies and M.Ed from UCLA. </p>
 
          </div>
 
