home page fixes

--- a/our_work/content-YiM_Guide_Overview.html
+++ b/our_work/content-YiM_Guide_Overview.html
@@ -29,7 +29,7 @@
      <p class="quote_author">--John W. Gardner</p><br>
 This guide for middle school leaders describes four work areas central to developing a whole-school youth development approach based on one school's process. The guide describes preliminary evidence of progress, and includes hyperlinks to tools that can be adapted to support similar efforts in other settings.<br /><br />
 
-<p>For a hard copy (including binder, content in black and white) of the YiM Guide, please contact Marianne Chatterton at <a href="mailto:mfchatte@stanford.edu">mfchatte@stanford.edu</a> for details. Cost is $40 (including shipping) per hard copy.<br />
+<p>Please change this text to: For a hard copy (including binder, content in black and white) of the YiM Guide, please contact Marianne Chatterton at <a href="mailto: mfchatte@stanford.edu">mfchatte@stanford.edu</a>. The cost per hard copy is $40 and includes domestic shipping. Additional shipping costs will be added to international orders.<br />
 
   <br />
 
