--- a/our_work/content-yell.html
+++ b/our_work/content-yell.html
@@ -39,7 +39,7 @@
 <br>
 <p>This curriculum is designed for school, program, and community leaders to support authentic youth participation, promote effective policies and practices to strengthen communities, and support young people's personal growth.</p>
 <br>
-<p>For a hard copy (including binder) of the YELL curriculum, please contact Marianne Chatterton at <a href="mailto: mfchatte@stanford.edu">mfchatte@stanford.edu</a> for details. Cost is $40 (including shipping) per hard copy.</p>
+<p>For a hard copy (including binder) of the YELL curriculum, please contact Marianne Chatterton at mfchatte@stanford.edu. The cost per hard copy is $40 and includes domestic shipping. Additional shipping costs will be added to international orders.</p>
 <br>
 <p>To download the handbook for free, please click on the following links for individual sections (.pdf opens in new browser windows):</p>
 <br>
