--- a/about_jgc/content-jobs.html
+++ b/about_jgc/content-jobs.html
@@ -6,14 +6,19 @@
         <h1 class="title-page-header-big">Jobs, Internships, and Volunteer Opportunities</h1>
 <br>
 <h1 class="content-text-header">Job Openings</h1><br>
-<a href="/about_jgc/SSRA_Job_Description_2012"><span class="content-bold">Social Science Research Associate</span></a> (Job ID: 46371)<br>
-Apply through <a href="http://jobs.stanford.edu/">http://jobs.stanford.edu/</a>
+<ul>
+<li><a href="/about_jgc/SSRA_Job_Description_2012"><span class="content-bold">Social Science Research Associate</span></a> (Job ID: 46371)<br>
+Apply through <a href="http://jobs.stanford.edu/">http://jobs.stanford.edu/</a></li>
+</ul>
 <br>
 <br>
   <h1 class="content-text-header">Internships</h1>  
 <br>
-<a href="/about_jgc/Qualitative Research Intern Summer2012.pdf"><span class="content-bold">Qualitative Research Intern</span></a> 
- 
+<ul>
+<li><a href="/about_jgc/Qualitative Research Intern.pdf"><span class="content-bold">Qualitative Research Intern</span></a></li>
+<li><a href="/about_jgc/Communications Intern.pdf"><span class="content-bold">Communications Intern</span></a></li> 
+ </ul>
+
          </div>
 
     
