--- a/our_work/content-playworks.html
+++ b/our_work/content-playworks.html
@@ -18,6 +18,9 @@
 
       <h1 class="content-text-header">Publications</h1>
 <ul>
+
+<li>Playworks Can Transform the School Climate, from the Playground to the Classroom (<a href="http://www.rwjf.org/vulnerablepopulations/product.jsp?id=74194">Fact Sheet & Full Study</a>)</li>
+
 <li>Playworks Implementation in Eight Bay Area Elementary Schools (<a href="http://www.rwjf.org/files/research/4632.63651.finalreport.pdf">Report</a>)</li>
 
 <li>Playworks: Supporting Play and Physical Activity in Low-Income Elementary Schools (<a href="http://www.rwjf.org/files/research/4632.63651.playandphysicalactivity.pdf">Report)</a></li>
