mutliple changes april 24th week

--- a/about_jgc/content-jobs.html
+++ b/about_jgc/content-jobs.html
@@ -7,7 +7,9 @@
 <br>
 <h1 class="content-text-header">Job Openings</h1><br>
 <ul>
-<li><a href="/about_jgc/SSRA_Job_Description_2012"><span class="content-bold">Social Science Research Associate</span></a> (Job ID: 46371)<br>
+<li><a href="/about_jgc/SSRA_Job_Description_2012.pdf"><span class="content-bold">Social Science Research Associate</span></a> (Job ID: 46371)<br>
+Apply through <a href="http://jobs.stanford.edu/">http://jobs.stanford.edu/</a></li>
+<li><a href="/about_jgc/Project Coordinator.pdf"><span class="content-bold">Project Coordinator</span></a> (Job ID: 47411)<br>
 Apply through <a href="http://jobs.stanford.edu/">http://jobs.stanford.edu/</a></li>
 </ul>
 <br>
