--- a/our_work/content-truancy.html
+++ b/our_work/content-truancy.html
@@ -21,6 +21,18 @@
 <li>San Mateo County Human Services Agency</li>
 <li>Sequioia Union High School District</li>
 </ul>
+<br>
+
+<h1 class="content-text-header">Publications</h1>
+<ul>
+
+<li>Truancy and Chronic Absence in Redwood City (<a href="/resources/publications/Absence_IB_final.pdf">Issue Brief</a>)</li>
+
+<li>Chronic Absence in Redwood City, California Schools (<a href="/resources/publications/Absence_Snapshot_final.pdf">Snapshot</a>)</li>
+
+<li>Collaborative Approaches to Reducing Absenteeism Among K‐12 Students (<a href="/resources/policy_fact_sheets/Absence_Interventions_PFS_final.pdf">Policy Fact Sheet)</a></li>
+
+</ul>
     </div> <!--end right side box div-->
     </aside>
 
