--- a/resources/content-snapshots.html
+++ b/resources/content-snapshots.html
@@ -8,6 +8,7 @@
 <br>
 <span class="content-bold">2012</span>
 <ul style="list-style: none;">
+<li><a href="/resources/publications/Absence_Snapshot_final.pdf" class="link-no-underline">Chronic Absence in Redwood City, California Schools</a></li>
 <li><a href="/resources/publications/Gurantz_SS_120203_English Articulation Between the San Francisco Unified School District and the City College of San Francisco.pdf" class="link-no-underline">English Articulation Between the San Francisco Unified School District and the City College of San Francisco</a></li>
 </ul>
 
