fixes for 04-28 release

--- a/our_work/absence.html
+++ b/our_work/absence.html
@@ -21,7 +21,7 @@ document.createElement("article" );
 
 <body>
 <!--#include virtual="/content-menu-top.html" -->
-<!--#include virtual="content-truancy.html" -->
+<!--#include virtual="content-absence.html" -->
 <!--#include virtual="/content-footer.html" -->
 <!--#include virtual="/content-analytics.html" -->
 </body>
