--- a/our_work/content-absence.html
+++ b/our_work/content-absence.html
@@ -17,9 +17,8 @@
 <li>Redwood City 2020</li>
 <li>Redwood City Police Department</li>
 <li>Redwood City School District </li>
-<li>San Mateo County Health System</li>
 <li>San Mateo County Human Services Agency</li>
-<li>Sequioia Union High School District</li>
+<li>Sequoia Union High School District</li>
 </ul>
 <br>
 
@@ -30,7 +29,7 @@
 
 <li>Chronic Absence in Redwood City, California Schools (<a href="/resources/publications/Absence_Snapshot_final.pdf">Snapshot</a>)</li>
 
-<li>Collaborative Approaches to Reducing Absenteeism Among K‐12 Students (<a href="/resources/policy_fact_sheets/Absence_Interventions_PFS_final.pdf">Policy Fact Sheet)</a></li>
+<li>Collaborative Approaches to Reducing Absenteeism Among K‐12 Students (<a href="/resources/policy_fact_sheets/Absence_Interventions_PFS.pdf">Policy Fact Sheet)</a></li>
 
 </ul>
     </div> <!--end right side box div-->
