cleaning up dangling truancy links

--- a/our_work/content-allwork.html
+++ b/our_work/content-allwork.html
@@ -90,7 +90,7 @@
 
 	   <h1 class="content-text-header">T</h1>
 		<ul style="list-style: none;">
-			<li><a href="truancy.html">Truancy and Early Chronic Absenteeism in Redwood City</a></li>
+			<li><a href="absence.html">Truancy and Early Chronic Absenteeism in Redwood City</a></li>
 		</ul><br>
 <hr class="short-rule">
            <h1 class="content-text-header">U - X</h1><br>
