--- a/our_work/content-research-topic.html
+++ b/our_work/content-research-topic.html
@@ -60,7 +60,7 @@
 <li><a href="/our_work/alt-ed.html">California Alternative Education Research Project</a></li>	
 <li><a href="/our_work/foster_youth.html">Educational Outcomes of Dependent Youth</a></li>	
 <li><a href="/our_work/english_learner.html">English Learner After School Program Participation in Redwood City</a></li>	
-<li><a href="/our_work/truancy.html">Truancy and Early Chronic Absenteeism in Redwood City</a></li>	
+<li><a href="/our_work/absence.html">Truancy and Early Chronic Absenteeism in Redwood City</a></li>	
 </ul>
 <br>	
          </div>
