--- a/our_work/content-yda.html
+++ b/our_work/content-yda.html
@@ -21,7 +21,7 @@
 <li><a href="/our_work/bts.html">San Francisco Bridge to Success</a></li>
 <li><a href="/our_work/research_consortium.html">San Francisco Research Consortium</a> </li>
 <li><a href="/our_work/strc.html">Sequoia High School Teen Resource Center</a></li>
-<li><a href="/our_work/truancy.html">Truancy and Early Chronic Absenteeism in Redwood City</a></li>
+<li><a href="/our_work/absence.html">Truancy and Early Chronic Absenteeism in Redwood City</a></li>
 <li><a href="/our_work/motivation.html">Youth Development and Motivation</a></li>
 </ul>
 <br>
