--- a/partners/content-local.html
+++ b/partners/content-local.html
@@ -349,7 +349,7 @@
 <li><a href="/our_work/prevention_partnership.html">Redwood City-North Fair Oaks Prevention Partnership</a></li>
 <li><a href="/our_work/community_schools_eval.html">Redwood City Community Schools Evaluation</a> </li>
 <li><a href="/our_work/strc.html">Sequoia High School Teen Resource Center</a></li>
-<li><a href="/our_work/truancy.html">Truancy and Early Chronic Absenteeism in Redwood City</a></li>
+<li><a href="/our_work/absence.html">Truancy and Early Chronic Absenteeism in Redwood City</a></li>
 </ul>
 <br>
 
@@ -358,7 +358,7 @@
 <br>
 <ul>
 <li><a href="/our_work/cydi.html">Community Youth Development Initiative (CYDI)</a></li>
-<li><a href="/our_work/truancy.html">Truancy and Early Chronic Absenteeism in Redwood City</a></li>
+<li><a href="/our_work/absence.html">Truancy and Early Chronic Absenteeism in Redwood City</a></li>
 </ul>
 <br>
 
@@ -376,7 +376,7 @@
 <li><a href="/our_work/healthyschools.html">Sequoia Healthcare District - Healthy Schools Initiative</a></li>
 <li><a href="/our_work/saludamerica.html">Salud America</a></li>
 <li><a href="/our_work/motivation.html">Youth Development and Motivation</a></li>
-<li><a href="/our_work/truancy.html">Truancy and Early Chronic Absenteeism in Redwood City</a></li>
+<li><a href="/our_work/absence.html">Truancy and Early Chronic Absenteeism in Redwood City</a></li>
 </ul>
 <br>
 
@@ -424,9 +424,7 @@
 <a class="header-link" href=" http://www.co.sanmateo.ca.us/portal/site/health" target="_blank">San Mateo County Health System</a><br>
 <p>The mission of the San Mateo County Health System is to increase the longevity and quality of people’s lives by preventing health issues before they occur; protecting the public’s health; providing services for vulnerable populations; artnering to build healthy communities.</p>
 <br>
-<ul>
-<li><a href="/our_work/truancy.html">Truancy and Early Chronic Absenteeism in Redwood City</a></li>
-</ul>
+
 <br>
 
 <a class="header-link" href=" http://www.co.sanmateo.ca.us/portal/site/humanservices" target="_blank">San Mateo County Human Services Agency</a><br>
@@ -434,7 +432,7 @@
 <br>
 <ul>
 <li><a href="/our_work/foster_youth.html">Educational Outcomes of Dependent Youth</a></li>
-<li><a href="/our_work/truancy.html">Truancy and Early Chronic Absenteeism in Redwood City</a></li>
+<li><a href="/our_work/absence.html">Truancy and Early Chronic Absenteeism in Redwood City</a></li>
 </ul>
 <br>
 
@@ -454,7 +452,7 @@
 <li><a href="/our_work/alt-ed_transitions.html">Alternative Education Transitions</a></li>
 <li><a href="/our_work/healthyschools.html">Sequoia Healthcare District - Healthy Schools Initiative</a></li>
 <li><a href="/our_work/strc.html">Sequoia High School Teen Resource Center</a></li>
-<li><a href="/our_work/truancy.html">Truancy and Early Chronic Absenteeism in Redwood City</a></li>
+<li><a href="/our_work/absence.html">Truancy and Early Chronic Absenteeism in Redwood City</a></li>
 </ul>
 <br>
 
