added no-cahce http-equiv cache-control

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ document.createElement("article" );
 <!--[if (gt IE 9)|!(IE)]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="cache-control" content="no-cache" />
 
   <!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame 
        Remove this if you use the .htaccess -->
